@@ -83,3 +83,5 @@ require_relative 'excel_functions/text'
 require_relative 'excel_functions/hlookup'
 
 require_relative 'excel_functions/log'
+
+require_relative 'excel_functions/mmult'
